--- a/homework_1/assets/styles/style.css
+++ b/homework_1/assets/styles/style.css
@@ -2,6 +2,11 @@ body {
     font-family: sans-serif;
 }
 
+html {
+    background-color: antiquewhite;
+    margin: 10px;
+}
+
 .photo_flower {
     width: 300px;
     border-radius: 10px;
@@ -58,4 +63,35 @@ a {
     height: 30px;
     border-radius: 10px;
     border: 1px solid #ccc;
+    color: black;
+    background-color: aquamarine;
+    cursor: pointer;
+}
+
+.form_button:hover {
+    background-color: rgb(228, 234, 54);
+}
+
+.box_img {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+.wrapper_img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    justify-content: center;
+    background-color: rgb(216, 244, 175);
+}
+
+.text_descr {
+    font-style: normal;
+    font-weight: 200;
+    color: #7D7987;
+    font-size: 15px;
+    line-height: 30px;
 }
