--- a/homework_11_12/assets/style/style.css
+++ b/homework_11_12/assets/style/style.css
@@ -169,17 +169,6 @@ header {
 
 .menu-text {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%);
-    text-align: center;
-    font-family: Lato;
-    line-height: normal;
-}
-
-
-.accesories-text {
-    position: absolute;
     top: 35%;
     left: 50%;
     transform: translate(-50%);
@@ -187,6 +176,7 @@ header {
     font-family: Lato;
     line-height: normal;
 }
+
 
 
 .offer-text {
@@ -199,6 +189,7 @@ header {
     color: #F16D7F;
     font-size: 24px;
     font-weight: 700;
+    white-space: nowrap;
 }
 
 .catalog-title {
@@ -283,4 +274,63 @@ header {
     font-weight: 400;
     line-height: normal;
     padding: 15px 39px 14px 39px;
+}
+
+@media screen and (max-width: 1439px) {
+    .center {
+        max-width: 100%;
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
+
+    .into_header {
+        padding-top: 18px;
+        padding-bottom: 18px;
+    }
+    
+    .brand-wrapper {
+        gap: 39px;
+    }
+
+    .image-man {
+        max-width: 386px;
+    }
+
+    .brand__text_title {
+        font-size: 44px;
+    }
+
+    .brand__text-content {
+        font-size: 24px;
+    }
+
+    .menu {
+        gap: 19.9px;
+        margin-bottom: 110px;
+    }
+
+
+    .catalog-title {
+        margin-bottom: 73px;
+    }
+
+    .catalog-product {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 16px;
+        margin-bottom: 32px;
+    }
+
+    .item-product img {
+        display: grid;
+        width: 100%;
+        height: auto;
+    }
+
+    .item-product-description {
+        padding-left: 16.5px;
+    
+    }
+
 }
